--- a/emailTemplate.pug
+++ b/emailTemplate.pug
@@ -6,7 +6,7 @@ html
   body
     h1(class="") #{subject}
     br
-    p(class="") Hola #{userName} le llegó este email porque faltan #{diasRestantes} días para la finalización del contrato #{contractNumber} que finaliza en fecha #{fechaFinalizacion}.
+    p(class="") Hola estimado usuario, le llegó este email porque faltan #{diasRestantes} días para la finalización del contrato #{contractNumber} que finaliza en fecha #{fechaFinalizacion}.
     br
     p(class="") Por favor tome las precauciones necesarias.
     br
